chore: before fix scrollbar

--- a/styles/global.css
+++ b/styles/global.css
@@ -17,16 +17,14 @@
     --border-radius-8: 2.5rem;
     --border-radius-9: 3.125rem;
     /* font */
-    --font-size-1: 0.5rem;
-    --font-size-2: 0.6875rem;
-    --font-size-3: 0.75rem;
-    --font-size-4: 0.8125rem;
-    --font-size-5: 0.875rem;
-    --font-size-6: 1rem;
-    --font-size-7: 1.125rem;
-    --font-size-8: 1.25rem;
-    --font-size-9: 1.5rem;
-    --font-size-10: 2rem;
+    --font-size-2xs: 0.5rem;
+    --font-size-xs: 0.75rem;
+    --font-size-sm: 0.875rem;
+    --font-size-md: 1rem;
+    --font-size-lg: 1.125rem;
+    --font-size-xl: 1.25rem;
+    --font-size-2xl: 1.5rem;
+    --font-size-3xl: 2rem;
     /* line height */
     --line-height-1: 1.4375rem;
     --line-height-2: 1.75rem;
@@ -40,6 +38,9 @@
     /* transition */
     --transition-time: 350ms;
     --transition-method: cubic-bezier(0.8, -0.3, 0.2, 1.3);
+    /* full screen */
+    --full-screen-height: 100dvh;
+    --full-screen-width: 100dvw;
     /* colors */
     --color-success: #00ab50;
     --color-info: #216fd9;
@@ -52,22 +53,10 @@
     }
     &[data-theme="dark"] {
       /* colors */
-      --color-primary: #4CD5DC;
-      --color-secondary: #BB33FF;
+      --color-primary: #4cd5dc;
+      --color-secondary: #bb33ff;
     }
   }
-}
-
-/* for hide scrollbar */
-.disable-scroll_scrollbar-is-visible {
-  overflow-y: hidden;
-  padding-right: 5px;
-  @media (min-width: 1024px) {
-    padding-right: 7px;
-  }
-}
-.disable-scroll_scrollbar-is-not-visible {
-  overflow-y: hidden;
 }
 
 /* fix footer to bottom */
@@ -100,9 +89,27 @@ html {
   &::-webkit-scrollbar-thumb {
     background-color: #cfcfcf;
     border-radius: 10px;
+    opacity: 0 !important;
   }
   &::-webkit-scrollbar-thumb:hover {
     background: #adadad;
+  }
+}
+
+/* hide scrollbar */
+html {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: none !important;
+    background-color: transparent;
+  }
+  ::-webkit-scrollbar {
+    width: 3px !important;
+    background-color: transparent;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: transparent;
   }
 }
 
@@ -110,6 +117,7 @@ html {
 body {
   direction: rtl;
   font-weight: 400;
-  background-color: var(--color-secondary);
+  background-color: #696d70;
+  color: #fff;
   overflow-x: hidden;
 }
